* correccion falta informas informe

--- a/Tp3/informe/implementacion.tex
+++ b/Tp3/informe/implementacion.tex
@@ -44,7 +44,7 @@ El la carpeta codigo se encuentra todo el codigo y archivos necesarios para la e
 \label{sec:SaldosGenerales}
 
 \large{\textit{CFGSalgo.xml}}\\[0.5cm]
-En este archivo se configuran los saldos del casino, tento el saldo coneral como el saldo de los pozos de peremios.\\
+En este archivo se configuran los saldos del casino, tanto el saldo general como el saldo de los pozos de premios.\\
 Este archivo se carga en el momento de abrir el casino y se actualiza en el momento de cerrarlo (con los valores actualizados luego de los movimientos de saldo).
 
 \begin{framed}
@@ -61,7 +61,7 @@ Este archivo se carga en el momento de abrir el casino y se actualiza en el mome
 \label{sec:FichasValidas}
 
 \large{\textit{fichasValidas.xml}}\\[0.5cm]
-En este archivos se configuran las fichas validas del casino, el primer valor represnta el id de la ficha y el segundo el valor de la ficha. Los clientes apuestan por id de ficha (esto para tener indireccion con el valor real de las fichas).
+En este archivos se configuran las fichas validas del casino, el primer valor representa el id de la ficha y el segundo el valor de la ficha. Los clientes apuestan por id de ficha (esto para tener indireccion con el valor real de las fichas).
 
 \begin{framed}
 \begin{verbatim}
