--- a/Tp3/informe/testEntrar.tex
+++ b/Tp3/informe/testEntrar.tex
@@ -105,8 +105,8 @@ caso & casino estado & modo de ingreso & nombre & jugador registrado & cliente l
 
 Los datos de prueba estan en la carpeta /test/entrarCasino. En dicha carpeta existe una carpeta para cada caso, donde se encuentran la entrada (mensjes del cliente) y la respuesta (mensajes de respuesta del servidor). Tambien existe un archivo casoXX.txt que explica la secuencia de mensajes entre al cliente y servidor\\
 Estos test fueron corridos en DEBUG para observar los cambios de estado en el casino, Ademas de observar el estado del casino observamos que los archivos de respuesta le dieran la informacion correcta al cliente.\\
-Los test de entrar casino nos ayudaron a darnos cuenta algunos errorres como:
+Los test de entrar casino nos ayudaron a darnos cuenta algunos errores como:
 \begin{itemize}
-	\item nos dimos cuenta que faltaba una validacion sobre la repeticion de loggeo en la misma terminal virtual.
+	\item Nos dimos cuenta que faltaba una validacion sobre la repeticion de loggeo en la misma terminal virtual.
 \end{itemize}
-Al finalizar los testeos logramos que todos los test a entrar casino fueron extosos.
+Al finalizar los testeos logramos que todos los test a entrar casino fueran exitosos.
