--- a/trunk/Tp3/informe/introduccion.tex
+++ b/trunk/Tp3/informe/introduccion.tex
@@ -1,1 +1,36 @@
 \section{Introduccion}
+
+\subsection{Objetivo del documento}
+
+El objetivo de este documento es presentar un analisis detallado del proceso de implementacion a partir del diseño y de la presentacion del testing funcional realizado sobre las 2 funcionalidades pedidas.
+Con respecto a la implementacion, se presentan algunas decisiones que tuvimos que tomar que provocaron cambios con respecto al diseño presentado, como asi la explicitacion del nivel de independencia alcanzado. Ademas incluimos una detallada explicación de las librerías y paquetes utilizados en el codigo, como asi también el protocolo de administracion del casinoOnLine.
+En el caso del testing funcional, las 2 funcionalidades requeridas están detalladas y explicadas en lenguaje natural, con algunos detalles de las cosas que tuvimos en cuenta o que fueron descartadas del test o que asumimos para realizarlo.
+A continuación se prensentan algunos documentos que se podrían consultar y en los que hemos basado este tercer informe.
+
+\subsection{Documentos relacionados}
+	
+	Detallamos aqui algunos documentos relacionados:
+	
+\begin{itemize}
+  \item Diseño CasinoOn Line
+	\item Arquitectura Conceptual de la Aplicación y Protocolo de comunicación del Casino OnLine y respectivas actualizaciones.
+	\item Modificaciones al protocolo, 17-06-2008
+	\item Reglas Craps
+\end{itemize}
+
+Encontrará mas información y bibliografia en la seccion Referencias.
+	
+\subsection{Organización del informe}
+
+\textbf{El Informe esta organizado de la siguiente manera:}
+
+\begin{description}
+	\item[Cambios con respecto al diseño] Decisiones tomadas a la hora de implementar que han provocado cambios con respecto al diseño presentado con anterioridad. Incluye las respectivas justificaciones que validadan estas modificacionen realizadas. Se detalla el nivel de dependencia alcanzado y se lo podrá observar en un grafico representativo.
+	\item[Protocolo Administracion] Descripcion de los archivos xml utilizados para la manipulación del casino. 
+	\item[Implementacion] Explicacion de detalles implemantativos, descripcion de funcionalidades, utilidad de archivos, configuraciones iniciales. Incluimos algunas sugerencias para la compilacion y ejecucion de la aplicacion.
+	\item[Testing funcional] Descripcion del testing funcional sobre la funcionalidad. Tabla de factores, categorias y elecciones implicadas en la funcionalidad a testear. Tabla de casos de test con sus respectivos resultados esperados. Datos de prueba utilizados al testear la funcionalidad y descripcion del proceso de testeo al que fue sometida la aplicacion como tambien el resultado de los mismos.
+	\item[Conclusiones] Conclusiones obtenidas de esta tercera parte del trabajo.
+	\item[Referencias] Referencias bibliograficas que se pueden consultar.
+\end{description}
+
+
