--- a/trunk/Tp3/informe/protocoloAdministracion.tex
+++ b/trunk/Tp3/informe/protocoloAdministracion.tex
@@ -126,8 +126,8 @@ Especificaremos aqui todos los xmls de nuestra creacion, necesarios para la admi
 	\item Descripcion del xml:
 		\begin{verbatim}
 <setJugada>
-    <tipo>normal</tipo>
-    <juego>craps</juego>
+    <tipo>normal | feliz | todosponen</tipo>
+    <juego>craps | traga</juego>
     <mesa>1</mesa>
 </setJugada>
 \end{verbatim}
@@ -141,8 +141,8 @@ Especificaremos aqui todos los xmls de nuestra creacion, necesarios para la admi
 	\item Descripcion del xml:
 		\begin{verbatim}
 <setJugada>
-    <tipo>normal</tipo>
-    <juego>craps</juego>
+    <tipo>normal | feliz | todosponen<</tipo>
+    <juego>craps | traga</juego>
     <mesa>1</mesa>
     <aceptado>true | false</aceptado>			
     <descripcion>"descripcion"</descripcion>
